# SeAFusion

./: .gitignore  .pdm-python  FusionNet.py  conversion.py  onnx_test.py  pyproject.toml  torch_to_onnx.py  train.py
model/Fusion/: fusion_model.onnx  model_final.sarif
